Routing and stuff

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 </head>
 <body>
+<!--<div class="loader d-flex justify-content-center align-items-center">-->
+    <!--<p class="loader-content">Chargement ...</p>-->
+<!--</div>-->
 <app-root></app-root>
 </body>
 </html>
